# calcifer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
crates/calcifer-macos-acl/: Cargo.toml
crates/calcifer-macos-acl/src/: lib.rs
crates/calcifer-unix-child-fd/: Cargo.toml
crates/calcifer-unix-child-fd/src/: lib.rs  process_group_scan.rs
docs/: architecture.md  provider-compatibility.md  release-manifest.md  releasing.md  roadmap.md  security-model.md
docs/adr/: 0001-cross-profile-conversation-handoff.md  0002-private-provider-identity-binding.md  0003-supervised-codex-session.md
scripts/: package_release.py  publish_release.py  release_manifest.py  run_loopback_netns.py  run_with_watchdog.py  test_package_release.py  test_publish_release.py  test_release_manifest.py  test_release_workflow.py  test_run_loopback_netns.py  test_run_with_watchdog.py  test_verify_release.py  verify_release.py
specs/: codex-status-compatibility.md  managed-codex-config.md  managed-codex-environment.md  managed-codex-project-config.md
src/: cli.rs  conversations.rs  error.rs  executable.rs  lib.rs  main.rs  output.rs  profiles.rs  project_config.rs  provider_identity.rs
src/commands/: auth.rs  codex_conversation.rs  doctor.rs  mod.rs  process.rs  status.rs  update.rs
src/providers/: codex.rs  mod.rs
src/providers/codex/: handoff_compat.rs  json.rs  monitor.rs  remote.rs
src/providers/codex/handoff_compat/: proxy.rs  runtime.rs
src/providers/codex/monitor/: transport.rs
src/providers/codex/supervisor/: authority.rs  channel.rs  coordinator.rs  coordinator_terminal.rs  entry.rs  fixture.rs  guardian.rs  launcher.rs  mod.rs  packaged_smoke.rs  process.rs  protocol.rs  provider.rs  runtime.rs  session.rs  signals.rs  startup.rs  terminal.rs  transfer.rs
src/providers/codex/supervisor/fixture/: terminal_session.rs
tests/: cli.rs  supervisor.rs
