[package]
name = "calcifer"
version = "0.1.0-alpha.2"
edition = "2024"
rust-version = "1.85"
description = "Pre-alpha local-first wrapper for isolated coding-agent CLI profiles"
license = "MIT"
repository = "https://github.com/kazu-42/calcifer"
homepage = "https://github.com/kazu-42/calcifer"
readme = "README.md"
keywords = ["cli", "codex", "claude", "profiles", "automation"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
fs2 = "0.4.3"
jiff = { version = "0.2.32", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.5", features = ["v4"] }
which = "8.0.4"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["process"] }
signal-hook = "0.3.18"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
todo = "deny"
unwrap_used = "deny"
