[package]
name = "calcifer"
version = "0.1.0-alpha.3"
edition = "2024"
rust-version = "1.85"
description = "Pre-alpha local-first wrapper for isolated coding-agent CLI profiles"
license = "MIT"
repository = "https://github.com/kazu-42/calcifer"
homepage = "https://github.com/kazu-42/calcifer"
readme = "README.md"
keywords = ["cli", "codex", "claude", "profiles", "automation"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
fs2 = "0.4.3"
getrandom = "0.4.3"
hmac = "0.12.1"
jiff = { version = "0.2.32", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
semver = "1.0.27"
sha2 = "0.10.9"
toml = "1.1.3"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
uuid = { version = "1.23.5", features = ["v4"] }
which = "8.0.4"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs", "process"] }
signal-hook = "0.3.18"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
todo = "deny"
unwrap_used = "deny"
