[package]
name = "calcifer"
version = "0.1.0-alpha.4"
edition = "2024"
rust-version = "1.85"
description = "Pre-alpha local-first wrapper for isolated coding-agent CLI profiles"
license = "MIT"
repository = "https://github.com/kazu-42/calcifer"
homepage = "https://github.com/kazu-42/calcifer"
readme = "README.md"
keywords = ["cli", "codex", "claude", "profiles", "automation"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[features]
default = []
internal-supervisor-fixture = ["dep:log", "dep:tungstenite"]

[[bin]]
name = "calcifer-supervisor-fixture"
path = "src/bin/calcifer-supervisor-fixture.rs"
required-features = ["internal-supervisor-fixture"]

[[test]]
name = "supervisor"
path = "tests/supervisor.rs"
required-features = ["internal-supervisor-fixture"]

[workspace]
members = ["crates/calcifer-macos-acl", "crates/calcifer-unix-child-fd"]
default-members = [".", "crates/calcifer-macos-acl", "crates/calcifer-unix-child-fd"]
resolver = "3"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
fs2 = "0.4.3"
getrandom = "0.4.3"
hmac = "0.12.1"
jiff = { version = "0.2.32", default-features = false, features = ["std"] }
# Tungstenite renders raw frames at `trace`. When the internal supervised
# provider is compiled, compile the `log` facade out so a future logger cannot
# expose provider payloads before Calcifer's typed redaction boundary. Keeping
# this dependency optional avoids changing logging for normal builds.
log = { version = "0.4.33", optional = true, features = ["max_level_off", "release_max_level_off"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
semver = "1.0.27"
sha2 = "0.10.9"
subtle = "2.6.1"
toml = "1.1.3"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
uuid = { version = "1.23.5", features = ["v4"] }
which = "8.0.4"

[target.'cfg(unix)'.dependencies]
calcifer-unix-child-fd = { version = "0.1.0", path = "crates/calcifer-unix-child-fd" }
rustix = { version = "1.1.4", features = ["event", "fs", "net", "process", "pty", "termios"] }
signal-hook = "0.3.18"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tungstenite = { version = "0.29.0", optional = true, default-features = false, features = ["handshake"] }

[target.'cfg(target_os = "macos")'.dependencies]
calcifer-macos-acl = { version = "0.1.0", path = "crates/calcifer-macos-acl" }
exacl = "0.13.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
todo = "deny"
unwrap_used = "deny"
