[package]
name = "calcifer-unix-child-fd"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Internal child-only Unix descriptor inheritance for Calcifer"
license = "MIT"
publish = false

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
todo = "deny"
unwrap_used = "deny"
